--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,16 @@
    },
    "browser_action": {
      "default_icon": "images/logo_37.png", 
-     "default_title": "Minus - Start Sharing",      
      "popup": "popup.html"        
    },
    "content_scripts": [{
       "css": [ "css/page.css"],
-      "js": ["js/jquery.min.js", "js/browser_api.js", "js/content_script.js"],
+      "js": ["js/jquery.min.js", "js/jquery-ui.min.js", "js/browser_api.js", "js/content_script.js"],
       "matches": ["http://*/*","https://*/*"]
+   },
+   {
+      "js": ["js/minus_auth.js"],
+      "matches": ["http://min.us/*"]
    }],
    "background_page": "background.html",
    "options_page": "options.html",
