--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "name": "Minus",
-   "version": "0.9",
+   "version": "1.0",
    "description": "Minus - Share simply",
    "icons": {
       "16": "images/logo_small.png",
@@ -11,9 +11,10 @@
      "popup": "popup.html"        
    },
    "content_scripts": [{
-      "css": [ "css/page.css"],
+      "css": [ "css/reset-context-min.css", "css/page.css"],
       "js": ["js/jquery.min.js", "js/jquery-ui.min.js", "js/browser_api.js", "js/content_script.js"],
-      "matches": ["http://*/*","https://*/*"]
+      "matches": ["http://*/*","https://*/*"],
+      "run_at": "document_start"
    },
    {
       "js": ["js/minus_auth.js"],
