--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "name": "Minus",
-   "version": "1.0",
+   "version": "1.0.5",
    "description": "Minus - Share simply",
    "icons": {
       "16": "images/logo_small.png",
@@ -12,7 +12,7 @@
    },
    "content_scripts": [{
       "css": [ "css/reset-context-min.css", "css/page.css"],
-      "js": ["js/jquery.min.js", "js/jquery-ui.min.js", "js/browser_api.js", "js/content_script.js"],
+      "js": ["js/jquery.min.js", "js/browser_api.js", "js/content_script.js"],
       "matches": ["http://*/*","https://*/*"],
       "run_at": "document_start"
    },
@@ -20,7 +20,7 @@
       "js": ["js/minus_auth.js"],
       "matches": ["http://min.us/*","http://minus.com/*"]
    }],
-   "background_page": "background.html",
+   "background_page": "background.html",   
    "options_page": "options.html",
    "permissions": ["contextMenus", "tabs", "http://*/", "https://*/"]
 }
